[package]
name = "soc2019"
version = "0.1.0"
authors = ["Adam Copp <adam.copp@gmail.com>"]
edition = "2018"

[lib]
name = "computer"
path = "src/computer.rs"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[dependencies]
simple-error = "0.2.1"