[package]
name = "soc2019"
version = "0.1.0"
authors = ["Adam Copp <adam.copp@gmail.com>"]
edition = "2018"

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[[bin]]
name = "day7"
path = "src/day7/main.rs"

[[bin]]
name = "day8"
path = "src/day8/main.rs"

[[bin]]
name = "day9"
path = "src/day9/main.rs"

[[bin]]
name = "day10"
path = "src/day10/main.rs"

[dependencies]
simple-error = "0.2.1"
crossbeam-channel = "0.4"